<resources>
    <string name="app_name">FilaOfChicken</string>
    <string name="FilaOfChicken">FilaOfChicken</string>
    <string name="Fries">Fries</string>
    <string name="Nuggets">Nuggets</string>
    <string name="Drinks">Drinks</string>
    <string name="Smallfrie">Smallfrie $2.00</string>
    <string name="Mediumfrie">Mediumfrie $4.00</string>
    <string name="Largefrie">Largefrie $5.00</string>
    <string name="TenpcNugget">TenpcNugget 3.00</string>
    <string name="TwentypcNugget">TwentypcNugget $5.00</string>
    <string name="ThirtypcNugget">ThirtypcNugget $4.00</string>
    <string name="Smalldrink">Smalldrink $1.10</string>
    <string name="Mediumdrink">Mediumdrink $2.10</string>
    <string name="Largedrink">Largedrink $3.00</string>
    <string name="price">0</string>
</resources>
