<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioButton
        android:id="@+id/Smallfrie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Smallfrie" />

    <RadioButton
        android:id="@+id/Mediumfrie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mediumfrie" />

    <RadioButton
        android:id="@+id/Largefrie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Largefrie"/>

    </RadioGroup>

</LinearLayout>