<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <RadioButton
            android:id="@+id/Smalldrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Smalldrink" />

        <RadioButton
            android:id="@+id/Mediumdrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mediumdrink" />

        <RadioButton
            android:id="@+id/Largedrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Largedrink"/>

    </RadioGroup>

</LinearLayout>