<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <RadioButton
            android:id="@+id/TenpcNugget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TenpcNugget" />

        <RadioButton
            android:id="@+id/TwentypcNugget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TwentypcNugget" />

        <RadioButton
            android:id="@+id/ThirtypcNugget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ThirtypcNugget"/>

    </RadioGroup>

</LinearLayout>